Removed .env from docker-compose.yml, formatted code, users crud refactor.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
     build: .
     ports:
       - "8000:8000"
-    env_file:
-      - .env
+    environment:
+      - SQLALCHEMY_DATABASE_URL=postgresql+psycopg2://postgres:password@$db:5432/vwire_db
 volumes:
   db_data:
     driver: local
