--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
 runtime: python39
-entrypoint: uvicorn --port :$PORT app.main:app
+entrypoint: uvicorn --port $PORT app.main:app
 
 #europe-central2
