--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,10 @@
 runtime: python39
 entrypoint: uvicorn --port $PORT app.main:app
 
+env_variables:
+  CLOUD_SQL_USERNAME: ...
+  CLOUD_SQL_PASSWORD: ...
+  CLOUD_SQL_DATABASE_NAME: ...
+  CLOUD_SQL_CONNECTION_NAME: ...
+
 #europe-central2
